last changes before refactor

--- a/src/renderer/styles/index.css
+++ b/src/renderer/styles/index.css
@@ -118,7 +118,7 @@ code {
   color: white;
 }
 
-/* ParticipantEditor column backgrounds */
+/* DataViewer column backgrounds */
 .forms-column {
   background-color: var(--forms-column-bg);
 }
